# moary_studio

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
qml/: Main.qml  qml.qrc  resources.qrc
qml/common/popups/: MoaryPopup.qml
qml/common/shape/: MoaryRectangle.qml
qml/common/text/: MoaryText.qml
qml/components/Buttons/: GeneralButton.qml
qml/components/TextFields/: FormTextField.qml
qml/layouts/: Header.qml
qml/pages/: MainWindow.qml  Viewer3D.qml
qml/pages/Project/: CreateProjectPopup.qml  LoadProject.qml  ProjectItemView.qml
qml/pages/dashboard/: Dashboard.qml  DragDropSong.qml  SongListItem.qml  SongsList.qml
qml/themes/: Theme.qml
resources/: moary.rc
src/: application_manager.cpp  application_manager.h  main.cpp
src/controllers/: window_controller.cpp  window_controller.h
src/controllers/Audio/: audio_controller.cpp  audio_controller.h  customqml.cpp  customqml.h
src/persistance/: persistance_controller.cpp  persistance_controller.h  project_controller.cpp  project_controller.h  project_factory.cpp  project_factory.h
src/persistance/models/project/: audio_sample.cpp  audio_sample.h  music_project.cpp  music_project.h  project.cpp  project.h
src/utils/: Singleton.h
